@@ -46,7 +46,9 @@ Changes in Go4 v4.6.x
    will be created. Exclude dictionary generation for gui classes while
    no libraries with qt classes exists. 
 11.Mostly comlete porting to ROOT6 and Qt5.
-         
+12.Introdece UserPreLoop() and UserPostLoop() methods in TGo4EventProcessor.
+   One can use such methods without creation of specialized analysis class. 
+             
 
 Changes in Go4 v4.6.0 (November 2013)
 1. Start implementation of new communication interfaces in Go4. Therefore
